# MicronUVGIRobot

./: .gitignore  .gitignore.swp  Readme.md  Readme_navigation.md  docker_dependencies.md  docker_run  docker_run_temp  micronrobotws.code-workspace
PIR_Relay_code/: PIR_Relay_code.ino
Support/: support.md
Support/Cost_Calculation/: distributed_cost_calculation.ipynb
Support/Cost_Calculation/.ipynb_checkpoints/: distributed_cost_calculation-checkpoint.ipynb
Support/cmake-3.15.6/: CMake.qs  CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
Support/cmake-3.15.6/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Support/cmake-3.15.6/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h  cmVersionConfig.h
Support/openpose/: CMakeLists.txt
ros-docker-gui/cpu/: docker_run
src/cmake-3.15.6/: CMake.DeveloperReference.HTML.qs  CMake.Documentation.SphinxHTML.qs  CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/turtle_bot_obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/turtle_bot_obstacle_avoidance/launch/: simulate_obstacle_avoidance.launch
src/turtle_bot_obstacle_avoidance/src/: simulate_obstacle_avoidance.py
src/uvc_safety/: CMakeLists.txt  README.md  package.xml
tiago_public_ws/src/: setup.sh
(+535 files in other folders)
